--- a/nginx/conf/default.conf
+++ b/nginx/conf/default.conf
@@ -10,7 +10,7 @@ server {
     }
 
     location / {
-        return 301 https://example.org$request_uri;
+        return 301 https://try.my-table.it$request_uri;
     }
 }
 
