modifications from tutorial

--- a/nginx/conf/default.conf
+++ b/nginx/conf/default.conf
@@ -2,7 +2,7 @@ server {
     listen 80;
     listen [::]:80;
 
-    server_name try.my-table.it www.try.my-table.it localhost;
+    server_name other.my-table.it www.other.my-table.it localhost;
     server_tokens off;
 
     location /.well-known/acme-challenge/ {
@@ -10,7 +10,8 @@ server {
     }
 
     location / {
-        return 301 https://try.my-table.it$request_uri;
+        return 200 "Hello, world! FROM NGINX\n";
+        #return 301 https://$host$request_uri;
     }
 }
 
