--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -9,9 +9,13 @@ services:
       - .:/app
     ports:
       - 5000:5000
-      
+
   webserver:
     image: nginx:latest
     ports:
       - 80:80
       - 443:443
+    restart: always
+    volumes:
+      - ./nginx/conf/:/etc/nginx/conf.d/:ro
+      - ./certbot/www:/var/www/certbot/:ro
