--- a/nginx/conf/default.conf
+++ b/nginx/conf/default.conf
@@ -10,8 +10,21 @@ server {
     }
 
     location / {
-        return 200 "Hello, world! FROM NGINX\n";
-        #return 301 https://$host$request_uri;
+        return 301 https://$host$request_uri;
+    }
+}
+
+server {
+    listen 443 default_server ssl http2;
+    listen [::]:443 ssl http2;
+
+    server_name other.my-table.it;
+
+    ssl_certificate /etc/nginx/ssl/live/other.my-table.it/fullchain.pem;
+    ssl_certificate_key /etc/nginx/ssl/live/other.my-table.it/privkey.pem;
+    
+    location / {
+    	return 200 "Hello, world! FROM NGINX, but secure";
     }
 }
 
