--- a/nginx/conf/default.conf
+++ b/nginx/conf/default.conf
@@ -21,7 +21,7 @@ server {
     server_name other.my-table.it;
 
     ssl_certificate /etc/nginx/ssl/live/my-table.it/fullchain.pem;
-    ssl_certificate_key /etc/nginx/ssl/live/my-table.it/privkey.pem;
+    ssl_certificate_key /etc/nginx/ssl/live/other.my-table.it/privkey.pem;
     
     location / {
     	return 200 "Hello, world! FROM NGINX, but secure";
