--- a/nginx/conf/default.conf
+++ b/nginx/conf/default.conf
@@ -10,21 +10,22 @@ server {
     }
 
     location / {
+        return 200 "Hello, world! FROM NGINX";
         return 301 https://$host$request_uri;
     }
 }
 
-# server {
-#     listen 443 default_server ssl http2;
-#     listen [::]:443 ssl http2;
+server {
+    listen 443 default_server ssl http2;
+    listen [::]:443 ssl http2;
 
-#     server_name other.my-table.it;
+    server_name other.my-table.it;
 
-#     ssl_certificate /etc/letsencrypt/live/other.my-table.it/fullchain.pem;
-#     ssl_certificate_key /etc/letsencrypt/live/other.my-table.it/privkey.pem;
+    ssl_certificate /etc/letsencrypt/live/other.my-table.it/fullchain.pem;
+    ssl_certificate_key /etc/letsencrypt/live/other.my-table.it/privkey.pem;
     
-#     location / {
-#     	return 200 "Hello, world! FROM NGINX, but secure";
-#     }
-# }
+    location / {
+    	return 200 "Hello, world! FROM NGINX, but secure";
+    }
+}
 
