--- a/nginx/conf/default.conf
+++ b/nginx/conf/default.conf
@@ -10,7 +10,7 @@ server {
     }
 
     location / {
-        return 200 "Hello, world! FROM NGINX";
+        # return 200 "Hello, world! FROM NGINX";
         return 301 https://$host$request_uri;
     }
 }
@@ -25,7 +25,11 @@ server {
     ssl_certificate_key /etc/letsencrypt/live/other.my-table.it/privkey.pem;
     
     location / {
-    	return 200 "Hello, world! FROM NGINX, but secure";
+        # return 200 "Hello, world! FROM NGINX, HTTPS";
+    	proxy_pass http://server:5000;
+        proxy_set_header Host $host;
+        proxy_set_header X-Real-IP $remote_addr;
+        proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
     }
 }
 
