--- a/nginx/conf/default.conf
+++ b/nginx/conf/default.conf
@@ -23,6 +23,17 @@ server {
 
     ssl_certificate /etc/letsencrypt/live/other.my-table.it/fullchain.pem;
     ssl_certificate_key /etc/letsencrypt/live/other.my-table.it/privkey.pem;
+
+    charset utf-8;
+
+    proxy_connect_timeout 600;
+    proxy_send_timeout 600;
+    proxy_read_timeout 600;
+    send_timeout 600;
+
+
+    # max upload size
+    client_max_body_size 512M; 
     
     location / {
         # return 200 "Hello, world! FROM NGINX, HTTPS";
